[package]
name = "postman"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
json = "0.12"
reqwest = { version = "0.10", features = ["blocking"] }
regex = "1"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
log = "0.4"
pretty_env_logger = "0.3"
dotenv = "0.15"
lazy_static = "1.4"
